Source/Alternet.UI.Pal/Api/StatusBar.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2023 AlterNET Software.</auto-generated>

#pragma once

#include "StatusBar.h"
#include "StatusBarPanel.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API StatusBar* StatusBar_Create_()
{
    return new StatusBar();
}

ALTERNET_UI_API int StatusBar_GetPanelCount_(StatusBar* obj)
{
    return obj->GetPanelCount();
}

ALTERNET_UI_API c_bool StatusBar_GetSizingGripVisible_(StatusBar* obj)
{
    return obj->GetSizingGripVisible();
}

ALTERNET_UI_API void StatusBar_SetSizingGripVisible_(StatusBar* obj, c_bool value)
{
    obj->SetSizingGripVisible(value);
}

ALTERNET_UI_API void StatusBar_InsertPanelAt_(StatusBar* obj, int index, StatusBarPanel* item)
{
    obj->InsertPanelAt(index, item);
}

ALTERNET_UI_API void StatusBar_RemovePanelAt_(StatusBar* obj, int index)
{
    obj->RemovePanelAt(index);
}